--- a/views/pages/article/add.ejs
+++ b/views/pages/article/add.ejs
@@ -4,8 +4,9 @@
     <li class="breadcrumb-item active">Add</li>
   </ol>
   <h1 class="display-4">Add Article</h1>
-  <!-- <form method="post" action="/articles/create" > -->
-  <ajax-form action="addArticle" :syncing.sync="syncing" :cloud-error.sync="cloudError" @submitted="dataArticleSubmit($event)" :form-data="dataArticle" :form-rules="formRules" :form-errors.sync="formErrors" >
+  <ajax-form action="addArticle" :syncing.sync="syncing" :cloud-error.sync="cloudError" @submitted="dataArticleSubmit($event)" 
+  :form-data="dataArticle" :form-rules="formRules" 
+  :form-errors.sync="formErrors"  >
     <div class="from-group">
       <label for="title">Titre : {{dataArticle.title}}</label>
       <input type="text"  v-model.trim="dataArticle.title" class="form-control" />
