--- a/views/pages/article/add.ejs
+++ b/views/pages/article/add.ejs
@@ -9,11 +9,11 @@
   :form-errors.sync="formErrors"  >
     <div class="from-group">
       <label for="title">Titre : {{dataArticle.title}}</label>
-      <input type="text"  v-model.trim="dataArticle.title" class="form-control" />
+      <input type="text"  v-model="dataArticle.title" class="form-control" />
     </div>
     <div class="from-group">
       <label for="body">Desc : {{dataArticle.desc}}</label>
-      <textarea type="text"   v-model.trim="dataArticle.desc" class="form-control"></textarea>
+      <textarea type="text"   v-model="dataArticle.desc" class="form-control"></textarea>
     </div>
     <ajax-button type="submit" :syncing="syncing" class="btn btn-primary" >POST</ajax-button>
   </ajax-form>
